--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ author:
   name             : "Kshitiz Tiwari"
   avatar           : "profile.jpg" 
   bio              : "PhD Student at the University of Arkansas, Fayetteville. "
-  location         : "Location"
+  location         : "Fayetteville, Arkansas"
   employer         : "University of Arkansas, Fayetteville"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=hEqZ5SIAAAAJ&hl=en"
   email            : "ktiwari@uark.edu"
   researchgate     : "https://www.researchgate.net/profile/Kshitiz-Tiwari"
