--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ name                     : &name "Kshitiz Tiwari"
 description              : &description "PhD Student at the University of Arkansas, Fayetteville. "
 url                      : https://zthsk.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "zthsk/zthsk.github.io"
+repository               : "zthsk.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -82,13 +82,13 @@ analytics:
 author:
   name             : "Kshitiz Tiwari"
   avatar           : "profile.jpg" 
-  bio              : "PhD Student at the University of Arkansas, Fayetteville. "
+  bio              : "Computer Science Student: Aspiring ML Researcher "
   location         : "Fayetteville, Arkansas"
   employer         : #"University of Arkansas, Fayetteville"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?user=hEqZ5SIAAAAJ&hl=en"
+  googlescholar    : https://scholar.google.com/citations?user=hEqZ5SIAAAAJ&hl=en
   email            : "ktiwari@uark.edu"
-  researchgate     : "https://www.researchgate.net/profile/Kshitiz-Tiwari"
+  researchgate     : https://www.researchgate.net/profile/Kshitiz-Tiwari
   uri              :
   bitbucket        :
   codepen          :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "zthsk"
+  linkedin         : zthsk
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
